[REFACTOR] Improve test suite for Event